# anoto_gui

./: .gitignore  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  anoto_gui.py  debug_pattern.py  demo.sh  generate_sample.py  requirements.txt  test_cv.py  verify_patterns.py  visualize_detection.py
READER/: R__15__16__10__10__ANOTO.json  R__15__16__10__10__VERIFY.json
assets/: GUI_G__81__56__10__10__X.json  test_image_gen.rs
shaders/: magnifier.wgsl
src/: anoto_decode.rs  lib.rs  main.rs  minify_arrow_grid.rs  plot_grid.rs  test_image_gen.rs
src/anoto_sequences/: a1.incl  a2.incl  a3.incl  a4_alt.incl
src/bevy/: bevy_hello.rs  dialog.rs  gui.rs  image.rs  magnifier.rs  main_gui.rs  mod.rs  utils.rs
src/bevy_gui/: gui_window.rs  mod.rs
src/bevy_tut/: bevy_tut.rs  mod.rs
src/gui_app/: app.rs  iced_ui.rs  mod.rs  state.rs
src/gui_app/layout/: mod.rs
src/gui_app/loader/: mod.rs
src/gui_app/preview/: mod.rs
src/gui_app/scaling/: mod.rs
src/gui_app/zoom/: mod.rs
src/ice/: editor.rs  mod.rs
src/kornia/: anoto.rs  binarize.rs  greyscale.rs  histogram.rs  image_proc.rs  look.rs  mod.rs
src/pdf/: bitmatrix.json  bitmatrix.txt  comprehensive.rs  gen_pdf.rs  mod.rs
tests/: anoto_decode.rs  anoto_detect.rs  anoto_detect_debug.rs  anoto_image_stats.rs
