[package]
name = "anoto_dot_reader"
version = "0.4.5"
edition = "2024"

[dependencies]
argh = "0.1.13"
kornia = "=0.1.9"
oxidize-pdf = "1.6.4"
rerun = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.9"
iced = { version = "0.13.1", features = ["highlighter", "system", "image", "canvas", "tokio", "advanced"] }
bytesize = "2.3.1"
iced_test = "0.0.0"
rfd = "0.16.0"
futures = "0.3"
futures-lite = "2.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }

imageproc = "0.23.0"
palette = "0.7.3"
