[package]
name = "anoto_dot_reader"
version = "0.5.4"
edition = "2024"
autobins = false
default-run = "reader_gui"

[[bin]]
name = "reader_gui"
path = "src/bin/gui.rs"

[[bin]]
name = "reader_cli"
path = "src/bin/anoto.rs"

[[bin]]
name = "match_expected"
path = "src/bin/match_expected.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
kornia = "=0.1.9"
oxidize-pdf = "1.6.6"
rerun = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.9"
iced = { version = "0.14.0", features = ["highlighter", "image", "canvas", "tokio", "advanced"] }
iced_core = "0.14.0"
bytesize = "2.3.1"
iced_test = "0.14.0"
rfd = "0.16.0"
futures = "0.3"
futures-lite = "2.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json"] }

rusttype = "0.9"
imageproc = "0.25.0"
palette = "0.7.3"
color_counter = "0.2.3"
imagequant = "4.4"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder"] }
